buildscript {
	// The Spring Boot Gradle plugin pulls spring-boot-buildpack-platform, whose POM pins
	// httpclient5 5.6.1 -> httpcore5 5.4 onto the PLUGIN classpath. Project-level
	// dependencyManagement (ext overrides below) cannot reach that configuration, so the
	// dependency-submission graph kept reporting the vulnerable declared nodes and Dependabot
	// alerts #113/#114/#117 stayed open after PR #1552. Build-time tooling only - never shipped -
	// but constrained here so the submitted graph carries no vulnerable node at all.
	configurations.classpath {
		resolutionStrategy {
			force 'org.apache.httpcomponents.client5:httpclient5:5.6.4'
			force 'org.apache.httpcomponents.core5:httpcore5:5.4.3'
			force 'org.apache.httpcomponents.core5:httpcore5-h2:5.4.3'
		}
	}
}

plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ooo.klae.connex'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

springBoot {
	buildInfo {
		def releaseBuildTime = providers.gradleProperty('buildTime')
		if (releaseBuildTime.isPresent()) {
			properties {
				time.set(releaseBuildTime)
			}
		}
		def gitSha = providers.gradleProperty('gitSha')
		if (!gitSha.isPresent() && new File(projectDir.parentFile, '.git').exists()) {
			gitSha = providers.exec {
				commandLine 'git', 'rev-parse', 'HEAD'
				ignoreExitValue = true
			}.standardOutput.asText.map { it.trim() }
		}
		properties {
			additional.put('gitSha', gitSha.map { sha -> sha.isEmpty() ? 'unknown' : sha }.orElse('unknown'))
		}
	}
}

repositories {
	mavenCentral()
	maven {
		name = 'shibboleth'
		url = 'https://build.shibboleth.net/maven/releases/'
		content {
			includeGroupByRegex 'org\\.opensaml.*'
			includeGroupByRegex 'net\\.shibboleth.*'
		}
	}
}

ext['tomcat.version'] = '11.0.23'
ext['jackson-2-bom.version'] = '2.21.5'
ext['jackson-bom.version'] = '3.1.5'
ext['logback.version'] = '1.5.35'

// Spring Boot 4.1.0 manages these below their patched versions (netty 4.2.15.Final,
// log4j2 2.25.4, httpcore5 5.4.2, httpclient5 5.6.1) and pins httpclient5 downward from
// what the AWS SDK requests. These overrides raise them past the advisories tracked in #1379;
// removing one silently reintroduces a known CVE.
ext['netty.version'] = '4.2.17.Final'
ext['log4j2.version'] = '2.25.5'
ext['httpcore5.version'] = '5.4.3'
ext['httpclient5.version'] = '5.6.4'

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.apache.httpcomponents.client5:httpclient5'
	implementation 'com.googlecode.libphonenumber:libphonenumber:9.0.36'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:4.1.0'
	implementation 'org.springframework.boot:spring-boot-session-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
	implementation 'org.springframework.security:spring-security-saml2-service-provider'
	implementation 'org.bouncycastle:bcpkix-jdk18on:1.85'
	implementation 'org.apache.pdfbox:pdfbox:3.0.8'
	implementation 'com.twelvemonkeys.imageio:imageio-jpeg:3.14.0'
	implementation 'com.twelvemonkeys.imageio:imageio-webp:3.14.0'
	implementation 'org.springframework.boot:spring-boot-flyway'
	implementation 'org.flywaydb:flyway-mysql'
	implementation("org.springframework.data:spring-data-commons:4.1.0")
	implementation 'org.springframework.security:spring-security-webauthn'
	implementation 'org.springframework.security:spring-security-messaging'
	implementation platform('software.amazon.awssdk:bom:2.51.3')
	implementation 'software.amazon.awssdk:s3'
	compileOnly 'io.micrometer:micrometer-registry-prometheus'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat-runtime'
	testImplementation 'com.webauthn4j:webauthn4j-test:0.31.9.RELEASE'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:4.1.0'
	testCompileOnly 'io.micrometer:micrometer-registry-prometheus'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << '-parameters'
	options.encoding = 'UTF-8'
}

tasks.named('test') {
	useJUnitPlatform()
	maxHeapSize = '2048m'
	maxParallelForks = 1
	forkEvery = 100
	// One test fork retains at most 10 cached pools. Including one context loading, the application-pool
	// budget is (10 + 1) * 10 = 110, leaving 41 of MySQL's default 151 for auxiliary test connections.
	systemProperty 'spring.test.context.cache.maxSize', '10'
}

def seederRuntimeClasspath = sourceSets.main.output + configurations.productionRuntimeClasspath

tasks.register('seedData', org.springframework.boot.gradle.tasks.run.BootRun) {
	group = 'application'
	description = 'Seeds deterministic tenant-scoped CRM data into a guarded database.'
	mainClass = 'ooo.klae.connex.backend.seeder.SeederApplication'
	classpath = seederRuntimeClasspath
	args '--spring.main.web-application-type=none',
		'--spring.profiles.active=seeder',
		'--connex.seeder.enabled=true'
	[
		seederProfile: 'profile',
		seederSeed: 'seed',
		seederWorkspaces: 'workspaces',
		seederAnchorDate: 'anchor-date',
		seederAllowRemoteHost: 'allow-remote-host'
	].each { projectProperty, applicationProperty ->
		def propertyValue = providers.gradleProperty(projectProperty)
		if (propertyValue.isPresent()) {
			args "--connex.seeder.${applicationProperty}=${propertyValue.get()}"
		}
	}
}

def verifySeederDevtoolsIsolation = tasks.register(
	'verifySeederDevtoolsIsolation',
	JavaExec
) {
	group = 'verification'
	description = 'Proves the seeder runtime ignores Spring DevTools home configuration.'
	dependsOn tasks.named('testClasses')
	mainClass = 'ooo.klae.connex.backend.seeder.SeederDevToolsIsolationProbe'
	classpath = sourceSets.test.output + seederRuntimeClasspath
	doFirst {
		def devtoolsArtifacts = classpath.files.findAll {
			it.name.startsWith('spring-boot-devtools-')
		}
		if (!devtoolsArtifacts.isEmpty()) {
			throw new GradleException('Seeder verification classpath contains Spring DevTools')
		}
		def devtoolsConfigDirectory = new File(
			temporaryDir,
			'.config/spring-boot'
		)
		if (!devtoolsConfigDirectory.mkdirs() && !devtoolsConfigDirectory.isDirectory()) {
			throw new GradleException('Cannot create the seeder DevTools probe directory')
		}
		new File(
			devtoolsConfigDirectory,
			'spring-boot-devtools.properties'
		).text = 'context.initializer.classes=ooo.klae.connex.backend.seeder.SeederDevToolsIsolationProbe$CanaryInitializer\n'
		environment 'SPRING_DEVTOOLS_HOME', temporaryDir.absolutePath
	}
}

tasks.named('test') {
	dependsOn verifySeederDevtoolsIsolation
}
